2014-02-10  Lars Ingebrigtsen  <larsi@gnus.org>

	* fns.c (Fmaphash): Say what `maphash' returns, since it may be
	unintuitive (bug#15824).
	(Fyes_or_no_p): Doc fix (bug#15456).

2014-02-10  Dmitry Antipov  <dmantipov@yandex.ru>

	* cmds.c (Fself_insert_command): Respect the width of EMACS_INT
	and avoid warning.

2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* cmds.c (Fself_insert_command): Output a clearer error message on
	negative repetitions (bug#9476).

	* macros.c (Fexecute_kbd_macro): Doc fix (bug#14206).

2014-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* syntax.c (Fskip_syntax_backward): Doc clarification (bug#15115).

	* minibuf.c (Fread_string): Doc clarification (bug#15422).

	* buffer.c (Fmake_overlay): Doc clarification (bug#15489).

2014-02-08  Juanma Barranquero  <lekktu@gmail.com>

	* keyboard.c (Frecursive_edit): Fix typo in docstring.

2014-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* xdisp.c (syms_of_xdisp): Doc clarification (bug#15657).

	* keyboard.c (Frecursive_edit): Say more precicely how throwing
	`exit' works (bug#15865).

2014-02-07  Martin Rudalics  <rudalics@gmx.at>

	Constrain window box/body sizes and margin widths (Bug#16649).
	* xdisp.c (window_box_width): Don't return less than zero.
	(window_box_left_offset, window_box_right_offset): Don't return
	more than the window's pixel width.
	* window.c (window_body_height, window_body_width): Don't return
	negative value.
	(window_resize_apply): Adjust margin width, if necessary.

2014-02-07  Glenn Morris  <rgm@gnu.org>

	* nsterm.m (syms_of_nsterm): Doc fix.

2014-02-06  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (pMultiByteToWideChar, pWideCharToMultiByte): New
	variables: pointers through which to call the respective APIs.
	(filename_to_utf16, filename_from_utf16, filename_to_ansi)
	(filename_from_ansi, sys_link, check_windows_init_file): Call
	MultiByteToWideChar and WideCharToMultiByte through pointers.
	This is required on Windows 9X, where we dynamically load