@@ -8,6 +8,9 @@
 
 	* cmds.c (Fself_insert_command): Respect the width of EMACS_INT
 	and avoid warning.
+	* eval.c (call_debugger): When exiting the debugger, do not allow
+	max_specpdl_size less than actual binding depth (Bug#16603).
+	(syms_of_eval): Adjust docstring.
 
 2014-02-09  Lars Ingebrigtsen  <larsi@gnus.org>
 
